# timers-rs

./: Cargo.toml  README.md
src/: app.rs  crossterm.rs  error.rs  main.rs  repository.rs  tui.rs  ui.rs
src/model/: mod.rs  project.rs  timer.rs
