[package]
name = "timers-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.1"
color-eyre = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
better-panic = "0.3.0"
chrono = "0.4"
tui-input = "0.11.1"
tui_confirm_dialog = "0.2.5"

[dev-dependencies]
clippy = "0.0.302"